8171194: Exception "Duplicate field name&signature in class file" should report the name and signature of the field

Added code to emit name and signature of duplicate field in java.lang.ClassFormatError exception message

Reviewed-by: dholmes, coleenp